<resources>
    <string name="app_name">Hotpler</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="hint_id">ID를 입력하세요</string>
    <string name="hint_password">패스워드를 입력하세요</string>
    <string name="hint_name">성명을 입력하세요</string>
    <string name="hint_mobileNO">휴대폰번호를 입력하세요</string>
    <string name="hint_email">이메일을 입력하세요</string>
    <string name="hint_age">나이를 입력하세요</string>
    <string name="btn_login">로그인</string>
    <string name="btn_register">회원가입</string>
    <string name="btn_logout">로그아웃</string>
    <string name="appkey">81323a9e0950c70b7ecd6f0e801af810</string>

</resources>