<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorBabyPink"
    android:orientation="vertical"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/HotplerToolbarTheme">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="18sp" />
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:padding="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:padding="10dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="260dp"
                android:gravity="right"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/t_regis_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="5dp"
                    android:text="아이디 :"
                    android:textSize="24sp" />
                <TextView
                    android:id="@+id/t_regis_pass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="5dp"
                    android:text="패스워드 :"
                    android:textSize="24sp" />
                <TextView
                    android:id="@+id/t_regis_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="17dp"
                    android:layout_marginBottom="5dp"
                    android:text="성명 :"
                    android:textSize="24sp" />
                <TextView
                    android:id="@+id/t_regis_age"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="10dp"
                    android:text="나이 :"
                    android:textSize="24sp" />






            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/et_regis_id"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/text_border_filled"
                    android:hint="@string/hint_id"
                    android:inputType="textCapWords"
                    android:padding="10dp"
                    android:textColor="@color/input_register"
                    android:textColorHint="@color/input_register_hint" />
                <EditText
                    android:id="@+id/et_regis_pass"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/text_border_filled"
                    android:hint="@string/hint_password"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:textColor="@color/input_register"
                    android:textColorHint="@color/input_register_hint" />
                <EditText
                    android:id="@+id/et_regis_name"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/text_border_filled"
                    android:hint="@string/hint_name"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:textColor="@color/input_register"
                    android:textColorHint="@color/input_register_hint" />
                <EditText
                    android:id="@+id/et_regis_age"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/text_border_filled"
                    android:hint="@string/hint_age"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:textColor="@color/input_register"
                    android:textColorHint="@color/input_register_hint" />







            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btn_register_register"
            android:layout_below="@+id/et_regis_age"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:background="@drawable/btn_radius"
            android:backgroundTint="@color/colorStrongPink"
            android:text="@string/btn_register"
            android:textColor="@color/white" />

    </LinearLayout>

</LinearLayout>